# Akinator3

./: Arbore.cpp  Arbore.hpp  CMakeLists.txt  EroareFormat.hpp  Intrebare.cpp  Intrebare.hpp  JocAkinator.cpp  JocAkinator.hpp  Nod.hpp  RaspunsDetaliat.cpp  RaspunsDetaliat.hpp  RaspunsFinal.cpp  RaspunsFinal.hpp  main.cpp  tastatura.txt
src/: Arbore.cpp  Intrebare.cpp  JocAkinator.cpp  Nod.cpp  RaspunsDetaliat.cpp  RaspunsFinal.cpp
srh/: Arbore.hpp  EroareDateInvalide.hpp  EroareFisier.hpp  JocAkinator.hpp  RaspunsDetaliat.hpp
